add_subdirectory(AffineToStandard)
add_subdirectory(AMDGPUToROCDL)
add_subdirectory(ArithmeticToLLVM)
if(MLIR_DIALECT_SPIRV_ENABLE)
  add_subdirectory(ArithmeticToSPIRV)
endif()
add_subdirectory(ArmNeon2dToIntr)
add_subdirectory(AsyncToLLVM)
add_subdirectory(BufferizationToMemRef)
add_subdirectory(ComplexToLLVM)
add_subdirectory(ComplexToLibm)
add_subdirectory(ComplexToStandard)
add_subdirectory(ControlFlowToLLVM)
add_subdirectory(ControlFlowToSPIRV)
add_subdirectory(FuncToLLVM)
add_subdirectory(FuncToSPIRV)
add_subdirectory(GPUCommon)
add_subdirectory(GPUToNVVM)
add_subdirectory(GPUToROCDL)
if(MLIR_DIALECT_SPIRV_ENABLE)
  add_subdirectory(GPUToSPIRV)
endif()
add_subdirectory(GPUToVulkan)
add_subdirectory(LinalgToLLVM)
if(MLIR_DIALECT_SPIRV_ENABLE)
  add_subdirectory(LinalgToSPIRV)
endif()
add_subdirectory(LinalgToStandard)
add_subdirectory(LLVMCommon)
add_subdirectory(MathToLibm)
add_subdirectory(MathToLLVM)
if(MLIR_DIALECT_SPIRV_ENABLE)
  add_subdirectory(MathToSPIRV)
endif()
add_subdirectory(MemRefToLLVM)
if(MLIR_DIALECT_SPIRV_ENABLE)
  add_subdirectory(MemRefToSPIRV)
endif()
add_subdirectory(NVGPUToNVVM)
add_subdirectory(OpenACCToLLVM)
add_subdirectory(OpenACCToSCF)
add_subdirectory(OpenMPToLLVM)
add_subdirectory(PDLToPDLInterp)
add_subdirectory(ReconcileUnrealizedCasts)
add_subdirectory(SCFToControlFlow)
add_subdirectory(SCFToGPU)
add_subdirectory(SCFToOpenMP)
if(MLIR_DIALECT_SPIRV_ENABLE)
  add_subdirectory(SCFToSPIRV)
endif()
add_subdirectory(ShapeToStandard)
if(MLIR_DIALECT_SPIRV_ENABLE)
  add_subdirectory(SPIRVToLLVM)
endif()
add_subdirectory(TensorToLinalg)
if(MLIR_DIALECT_SPIRV_ENABLE)
  add_subdirectory(TensorToSPIRV)
endif()
add_subdirectory(TosaToArith)
add_subdirectory(TosaToLinalg)
add_subdirectory(TosaToSCF)
add_subdirectory(TosaToTensor)
add_subdirectory(VectorToLLVM)
add_subdirectory(VectorToGPU)
add_subdirectory(VectorToSCF)
if(MLIR_DIALECT_SPIRV_ENABLE)
  add_subdirectory(VectorToSPIRV)
endif()
